contracts/mental_health_platform/clippy_v8_utf8.txt
cargo : warning: C:\Use
rs\EMMA\Desktop\uzima\c
ontracts\clinical_trial
\Cargo.toml: 
`default-features` is 
ignored for 
soroban-sdk, since 
`default-features` was 
not specified for `work
space.dependencies.soro
ban-sdk`, this could 
become a hard error in 
the future
At line:1 char:1
+ cargo clippy 
--package 
mental_health_platform 
-- -D warnings 2>&1 | 
O ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (warning: C:\U   
 se...r in the futu    
re:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
    Checking 
mental_health_platform 
v0.1.0 (C:\Users\EMMA\D
esktop\uzima\contracts\
mental_health_platform)
error: unused 
variable: 
`professional_id`
   --> contracts\mental
_health_platform\src\pr
ofessional_directory.rs
:140:9
    |
140 |         
professional_id: 
Address,
    |         
^^^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix it 
with an underscore: 
`_professional_id`
    |
    = note: `-D 
unused-variables` 
implied by `-D 
warnings`
    = help: to 
override `-D warnings` 
add `#[allow(unused_var
iables)]`

error[E0382]: borrow 
of moved value: 
`patient_id`
   --> contracts\mental
_health_platform\src\su
icide_prevention.rs:305
:23
    |
280 |         
patient_id: Address,
    |         
---------- move occurs 
because `patient_id` 
has type `soroban_sdk::
Address`, which does 
not implement the 
`Copy` trait
...
291 |             
patient_id,
    |             
---------- value moved 
here
...
305 |             
(plan_id, 
patient_id.clone()),
    |                  
     ^^^^^^^^^^ value 
borrowed here after 
move
    |
help: consider cloning 
the value if the 
performance cost is 
acceptable
    |
291 |             
patient_id: 
patient_id.clone(),
    |                  
     
++++++++++++++++++++

error: unused 
variable: 
`total_sessions`
   --> contracts\mental
_health_platform\src\th
erapy.rs:123:13
    |
123 |         let 
total_sessions = 
sessions.len();
    |             
^^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix it 
with an underscore: 
`_total_sessions`

error: variable 
`crisis_sessions` is 
assigned to, but never 
used
   --> contracts\mental
_health_platform\src\th
erapy.rs:124:13
    |
124 |         let mut 
crisis_sessions = 0;
    |             
^^^^^^^^^^^^^^^^^^^
    |
    = note: consider 
using 
`_crisis_sessions` 
instead

error: variable 
`follow_ups` is 
assigned to, but never 
used
   --> contracts\mental
_health_platform\src\th
erapy.rs:125:13
    |
125 |         let mut 
follow_ups = 0;
    |             
^^^^^^^^^^^^^^
    |
    = note: consider 
using `_follow_ups` 
instead

error: value assigned 
to `crisis_sessions` 
is never read
   --> contracts\mental
_health_platform\src\th
erapy.rs:129:17
    |
129 |                 
crisis_sessions += 1;
    |                 
^^^^^^^^^^^^^^^^^^^^
    |
    = help: maybe it 
is overwritten before 
being read?
    = note: `-D 
unused-assignments` 
implied by `-D 
warnings`
    = help: to 
override `-D warnings` 
add `#[allow(unused_ass
ignments)]`

error: value assigned 
to `follow_ups` is 
never read
   --> contracts\mental
_health_platform\src\th
erapy.rs:132:17
    |
132 |                 
follow_ups += 1;
    |                 
^^^^^^^^^^^^^^^
    |
    = help: maybe it 
is overwritten before 
being read?

error: unused 
variable: 
`session_duration`
  --> contracts\mental_
health_platform\src\wel
lness.rs:82:9
   |
82 |         
session_duration: u32,
   |         
^^^^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix it 
with an underscore: 
`_session_duration`

error: unused 
variable: `program_id`
   --> contracts\mental
_health_platform\src\we
llness.rs:131:9
    |
131 |         
program_id: u64,
    |         
^^^^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_program_id`

error: unused 
variable: `user_id`
   --> contracts\mental
_health_platform\src\we
llness.rs:132:9
    |
132 |         user_id: 
Address,
    |         ^^^^^^^ 
help: if this is 
intentional, prefix it 
with an underscore: 
`_user_id`

error: unused 
variable: `category`
   --> contracts\mental
_health_platform\src\we
llness.rs:143:9
    |
143 |         
category: Option<Wellne
ssCategory>,
    |         ^^^^^^^^ 
help: if this is 
intentional, prefix it 
with an underscore: 
`_category`

error[E0382]: use of 
moved value: `user_id`
   --> contracts\mental
_health_platform\src\we
llness.rs:185:14
    |
153 |         user_id: 
Address,
    |         ------- 
move occurs because 
`user_id` has type `sor
oban_sdk::Address`, 
which does not 
implement the `Copy` 
trait
...
163 |             
user_id,
    |             
------- value moved 
here
...
185 |             
(user_id, program_id, 
overall_rating),
    |              
^^^^^^^ value used 
here after move
    |
help: consider cloning 
the value if the 
performance cost is 
acceptable
    |
163 |             
user_id: 
user_id.clone(),
    |                  
  +++++++++++++++++

error: unused 
variable: `program_id`
   --> contracts\mental
_health_platform\src\we
llness.rs:191:44
    |
191 |     pub fn get_pr
ogram_feedback(env: 
&Env, program_id: u64) 
-> 
Vec<WellnessFeedback> {
    |                  
                       
   ^^^^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_program_id`

error[E0382]: use of 
moved value: `user_id`
   --> contracts\mental
_health_platform\src\we
llness.rs:291:14
    |
267 |         user_id: 
Address,
    |         ------- 
move occurs because 
`user_id` has type `sor
oban_sdk::Address`, 
which does not 
implement the `Copy` 
trait
...
273 |             
user_id,
    |             
------- value moved 
here
...
291 |             
(user_id, 
duration_minutes),
    |              
^^^^^^^ value used 
here after move
    |
help: consider cloning 
the value if the 
performance cost is 
acceptable
    |
273 |             
user_id: 
user_id.clone(),
    |                  
  +++++++++++++++++

error: unused 
variable: `user_id`
   --> contracts\mental
_health_platform\src\we
llness.rs:299:9
    |
299 |         user_id: 
Address,
    |         ^^^^^^^ 
help: if this is 
intentional, prefix it 
with an underscore: 
`_user_id`

error[E0382]: use of 
moved value: 
`contact.name`
   --> contracts\mental
_health_platform\src\li
b.rs:129:20
    |
119 |     pub fn add_em
ergency_contact(env: 
Env, user: Address, 
contact: 
EmergencyContact) {
    |                  
                       
                  
------- move occurs 
because `contact` has 
type `types::EmergencyC
ontact`, which does 
not implement the 
`Copy` trait
...
124 |         profile.e
mergency_contacts.push_
back(contact);
    |                  
                       
     ------- value 
moved here
...
129 |             
(user, contact.name),
    |                  
  ^^^^^^^^^^^^ value 
used here after move

error: unused 
variable: `permission`
   --> contracts\mental
_health_platform\src\li
b.rs:655:52
    |
655 |     fn 
check_permission(env: 
&Env, user: &Address, 
permission: 
Permission) -> bool {
    |                  
                       
           ^^^^^^^^^^ 
help: if this is 
intentional, prefix it 
with an underscore: 
`_permission`

For more information 
about this error, try 
`rustc --explain 
E0382`.
error: could not 
compile `mental_health_
platform` (lib) due to 
17 previous errors
